Upgrading to AngularJS 2.0